--- a/views/userView/checkout.ejs
+++ b/views/userView/checkout.ejs
@@ -441,13 +441,15 @@
     <script>
       function place() {
     const selectedRadio = document.querySelector('input[name="address"]:checked');
-    const paymentMethodInput = document.querySelector('input[name="paymentMethod"]:checked');
+    const paymentMethodInput = document.querySelector('input[name="paymentMethod"]:checked').value;
+
+    console.log(paymentMethodInput);
 
    
     const Total = document.getElementById("total").innerText;
 
     if (!selectedRadio) {
-        console.log('address select cheythittilla he');
+    
         Swal.fire({
             position: "center",
             icon: "warning",
@@ -461,7 +463,7 @@
     var addressId = selectedRadio.getAttribute("data-address-id");
 
     if (!paymentMethodInput) {
-        console.log('payment select cheythittilla he');
+        
         Swal.fire({
             position: "center",
             icon: "warning",
@@ -472,8 +474,8 @@
         return; // Exit the function to prevent further execution
     }
 
-        if (selectedRadio && paymentMeth) {
-          if (paymentMeth === "Online") {
+        if (selectedRadio && paymentMethodInput) {
+          if (paymentMethodInput === "Online") {
             fetch("onlinePayment", {
               method: "post",
               headers: {
@@ -499,9 +501,7 @@
                   image: "https://example.com/your_logo",
                   order_id: Order.id,
                   handler: function (response) {
-                    console.log(typeof response);
-                    console.log(typeof Order);
-
+                  
                     verifyPayment(response, Order);
                   },
                   prefill: {
@@ -530,7 +530,7 @@
                 console.error("Error fetching order details:", error);
                 // Handle error (show user-friendly message, etc.)
               });
-          } else if (paymentMeth === "COD") {
+          } else if (paymentMethodInput === "COD") {
             fetch("placeOrder", {
               method: "post",
               headers: {
@@ -574,6 +574,7 @@
 
         async function verifyPayment(payment, Order) {
           try {
+            console.log('code on verifing');
             const response = await fetch("/verifyOnlinePayment", {
               method: "POST",
               headers: {
@@ -585,6 +586,7 @@
                 response.json();
               })
               .then((data) => {
+                console.log('response vannu');
                 if (data.value === 1) {
                   Swal.fire({
                     position: "center",
