--- a/views/adminView/Dashboard.ejs
+++ b/views/adminView/Dashboard.ejs
@@ -85,7 +85,7 @@
                 <span>
                   <i class="fa-solid fa-credit-card"></i>
                 </span>
-                <span class="hide-menu">Sales Report</span>
+                <span class="hide-menu">SALES REPORT</span>
               </a>
             </li>
 
