--- a/views/adminView/editCategory.ejs
+++ b/views/adminView/editCategory.ejs
@@ -130,7 +130,7 @@
             </li>
 
             <li class="sidebar-item">
-              <a class="sidebar-link" href="./index.html" aria-expanded="false">
+              <a class="sidebar-link" href="/admin/orders" aria-expanded="false">
                 <span>
                   <i class="fa-brands fa-dropbox"></i>
                 </span>
@@ -139,16 +139,16 @@
             </li>
 
             <li class="sidebar-item">
-              <a class="sidebar-link" href="./index.html" aria-expanded="false">
+              <a class="sidebar-link" href="/admin/salesReport" aria-expanded="false">
                 <span>
                   <i class="fa-solid fa-credit-card"></i>
                 </span>
-                <span class="hide-menu">PAYMENTS</span>
+                <span class="hide-menu">SALES REPORT</span>
               </a>
             </li>
 
             <li class="sidebar-item">
-              <a class="sidebar-link" href="./index.html" aria-expanded="false">
+              <a class="sidebar-link" href="/admin/logout" aria-expanded="false">
                 <span>
                   <i class="fa-solid fa-right-from-bracket"></i>
                 </span>
