--- a/views/adminView/orders.ejs
+++ b/views/adminView/orders.ejs
@@ -109,11 +109,11 @@
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="./index.html" aria-expanded="false">
+                            <a class="sidebar-link" href="/admin/salesReport" aria-expanded="false">
                                 <span>
                                     <i class="fa-solid fa-credit-card"></i>
                                 </span>
-                                <span class="hide-menu">PAYMENTS</span>
+                                <span class="hide-menu">SALES REPORT</span>
                             </a>
                         </li>
 
