--- a/views/adminView/salesReport.ejs
+++ b/views/adminView/salesReport.ejs
@@ -119,7 +119,7 @@
                                 <span>
                                     <i class="fa-solid fa-credit-card"></i>
                                 </span>
-                                <span class="hide-menu">PAYMENTS</span>
+                                <span class="hide-menu">SALES REPORT</span>
                             </a>
                         </li>
 
