--- a/views/adminView/category.ejs
+++ b/views/adminView/category.ejs
@@ -74,9 +74,7 @@
       data-sidebartype="full"
       data-sidebar-position="fixed"
       data-header-position="fixed"
-    >  
-    <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
-    data-sidebar-position="fixed" data-header-position="fixed">
+    >
       <!-- Sidebar Start -->
       <aside class="left-sidebar">
         <!-- Sidebar scroll-->
@@ -135,7 +133,7 @@
               </li>
   
               <li class="sidebar-item">
-                <a class="sidebar-link" href="./index.html" aria-expanded="false">
+                <a class="sidebar-link" href="/admin/orders" aria-expanded="false">
                   <span>
                     <i class="fa-brands fa-dropbox"></i>
                   </span>
@@ -144,16 +142,16 @@
               </li>
   
               <li class="sidebar-item">
-                <a class="sidebar-link" href="./index.html" aria-expanded="false">
+                <a class="sidebar-link" href="/admin/salesReport" aria-expanded="false">
                   <span>
                     <i class="fa-solid fa-credit-card"></i>
                   </span>
-                  <span class="hide-menu">PAYMENTS</span>
+                  <span class="hide-menu">SALES REPORT</span>
                 </a>
               </li>
   
               <li class="sidebar-item">
-                <a class="sidebar-link" href="./index.html" aria-expanded="false">
+                <a class="sidebar-link" href="/admin/logout" aria-expanded="false">
                   <span>
                     <i class="fa-solid fa-right-from-bracket"></i>
                   </span>
@@ -172,7 +170,6 @@
         </div>
         <!-- End Sidebar scroll-->
       </aside>
-      
       <!--  Sidebar End -->
       <!--  Main wrapper -->
       <div class="body-wrapper">
