--- a/views/adminView/products.ejs
+++ b/views/adminView/products.ejs
@@ -122,7 +122,7 @@
               </li>
   
               <li class="sidebar-item">
-                <a class="sidebar-link" href="./index.html" aria-expanded="false">
+                <a class="sidebar-link" href="/admin/orders" aria-expanded="false">
                   <span>
                     <i class="fa-brands fa-dropbox"></i>
                   </span>
@@ -131,16 +131,16 @@
               </li>
   
               <li class="sidebar-item">
-                <a class="sidebar-link" href="./index.html" aria-expanded="false">
+                <a class="sidebar-link" href="/admin/salesReport" aria-expanded="false">
                   <span>
                     <i class="fa-solid fa-credit-card"></i>
                   </span>
-                  <span class="hide-menu">PAYMENTS</span>
+                  <span class="hide-menu">SALES REPORT</span>
                 </a>
               </li>
   
               <li class="sidebar-item">
-                <a class="sidebar-link" href="./index.html" aria-expanded="false">
+                <a class="sidebar-link" href="/admin/logout" aria-expanded="false">
                   <span>
                     <i class="fa-solid fa-right-from-bracket"></i>
                   </span>
@@ -167,11 +167,7 @@
           <nav class="navbar navbar-expand-lg navbar-light">
             <ul class="navbar-nav">
               <li class="nav-item d-block d-xl-none">
-                <a
-                  class="nav-link sidebartoggler nav-icon-hover"
-                  id="headerCollapse"
-                  href="javascript:void(0)"
-                >
+                <a class="nav-link sidebartoggler nav-icon-hover" id="headerCollapse" href="javascript:void(0)">
                   <i class="ti ti-menu-2"></i>
                 </a>
               </li>
@@ -182,63 +178,15 @@
                 </a>
               </li>
             </ul>
-            <div
-              class="navbar-collapse justify-content-end px-0"
-              id="navbarNav"
-            >
-              <ul
-                class="navbar-nav flex-row ms-auto align-items-center justify-content-end"
-              >
-                <a href="" target="_blank" class="btn btn-primary">PROFILE</a>
+            <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
+              <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
+               
                 <li class="nav-item dropdown">
-                  <a
-                    class="nav-link nav-icon-hover"
-                    href="javascript:void(0)"
-                    id="drop2"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    <img
-                      src="../assets/images/profile/user-1.jpg"
-                      alt=""
-                      width="35"
-                      height="35"
-                      class="rounded-circle"
-                    />
+                  <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <img src="/assets/images/profile/user-1.jpg" alt="" width="35" height="35" class="rounded-circle">
                   </a>
-                  <div
-                    class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up"
-                    aria-labelledby="drop2"
-                  >
-                    <div class="message-body">
-                      <a
-                        href="javascript:void(0)"
-                        class="d-flex align-items-center gap-2 dropdown-item"
-                      >
-                        <i class="ti ti-user fs-6"></i>
-                        <p class="mb-0 fs-3">My Profile</p>
-                      </a>
-                      <a
-                        href="javascript:void(0)"
-                        class="d-flex align-items-center gap-2 dropdown-item"
-                      >
-                        <i class="ti ti-mail fs-6"></i>
-                        <p class="mb-0 fs-3">My Account</p>
-                      </a>
-                      <a
-                        href="javascript:void(0)"
-                        class="d-flex align-items-center gap-2 dropdown-item"
-                      >
-                        <i class="ti ti-list-check fs-6"></i>
-                        <p class="mb-0 fs-3">My Task</p>
-                      </a>
-                      <a
-                        href="./authentication-login.html"
-                        class="btn btn-outline-primary mx-3 mt-2 d-block"
-                        >Logout</a
-                      >
-                    </div>
-                  </div>
+                  
                 </li>
               </ul>
             </div>
