--- a/views/userView/checkout.ejs
+++ b/views/userView/checkout.ejs
@@ -551,6 +551,11 @@
                     showConfirmButton: false,
                     timer: 1500,
                   });
+
+                  setTimeout(() => {
+                    window.location.href='/shop'
+                  }, 1600);
+
                 } else {
                   Swal.fire({
                     position: "center",
@@ -584,18 +589,19 @@
             })
               .then((response) => {
                 response.json();
-              })
-              .then((data) => {
-                console.log('response vannu');
-                if (data.value === 1) {
+                if(response.ok){
                   Swal.fire({
                     position: "center",
                     icon: "success",
                     title: "Order Placed",
                     showConfirmButton: false,
-                    timer: 1500,
+                    timer: 3500,
                   });
-                } else {
+
+                  setTimeout(() => {
+                    window.location.href="/orderSuccess"
+                  }, 2000);
+                }else{
                   Swal.fire({
                     position: "center",
                     icon: "warning",
@@ -604,7 +610,8 @@
                     timer: 1500,
                   });
                 }
-              });
+              })
+            
           } catch (error) {
             // Handle error
             console.error(error);
