--- a/views/userView/checkout.ejs
+++ b/views/userView/checkout.ejs
@@ -553,7 +553,7 @@
                   });
 
                   setTimeout(() => {
-                    window.location.href='/shop'
+                    window.location.href='/orderSuccess'
                   }, 1600);
 
                 } else {
