--- a/views/userView/orderSuccess.ejs
+++ b/views/userView/orderSuccess.ejs
@@ -14,6 +14,8 @@
       rel="stylesheet"
     />
 
+    
+
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
@@ -127,7 +129,17 @@
   </header>
   <!-- Header Section End -->
 
-    <h1>deeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee </h1>
+  <div class="container">
+    <div style=" background-color: #f3f2ee;  margin: 20px; padding: 10px;">
+    <!-- <img src="img/ssLOGOW.png" alt="Order Success Image"> -->
+    <h1>Order Successfully Placed!</h1>
+    <p>Your order has been successfully processed. Thank you for shopping with us!</p>
+    <a href="/shop">
+    <button class="btn btn-primary">Continue Shoping</button>
+  </a>
+    
+  </div>
+</div> 
 
    
 
