--- a/views/userView/cart.ejs
+++ b/views/userView/cart.ejs
@@ -158,6 +158,14 @@
         <div class="row">
           <div class="col-lg-8">
             <div class="shopping__cart__table">
+
+              <!-- <% if (cart.items.length === 0) { %>
+                <div style="background-color: aliceblue; width: 500px;">
+                  <h3>No Items In Cart</h3>
+                </div>
+                
+            <% } %> -->
+            
               <table>
                 <thead>
                   <tr>
@@ -232,8 +240,9 @@
                   <% }); %>
                 </tbody>
               </table>
-            
+             
             </div>
+            
 
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6">
