--- a/views/userView/home.ejs
+++ b/views/userView/home.ejs
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap"
     rel="stylesheet">
 
+   
+
     <!-- Css Styles -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css">
@@ -80,6 +82,10 @@
                         <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
                         <a href="#"><img src="img/icon/heart.png" alt=""></a>
                         <a href="./cart"><img src="img/icon/cart.png" alt="cart"> </a>
+                        <div style="width: 24px;
+                        height: 24px; margin-right: 20px;">
+                            <a href="./wallet"><img src="img/icon/wallet.png" alt="Profile"></i> </a>
+                        </div>
                         <div style="width: 19px;
                         height: 19px;">
                             <a href="./profile"><img src="img/icon/user.png" alt="Profile"> </a>
@@ -664,6 +670,7 @@
     <!-- Search End -->
      
     <!-- Js Plugins -->
+    
     <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/jquery.nice-select.min.js"></script>
