--- a/views/adminView/Dashboard.ejs
+++ b/views/adminView/Dashboard.ejs
@@ -8,6 +8,8 @@
   <link rel="shortcut icon" type="image/png" href="/img/ssLOGO.png" />
   <link rel="stylesheet" href="../assets/css/styles.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofP+MMJLFXaBxfsG6h02twsjFU5i1LdT2t" crossorigin="anonymous">
+
 </head>
 
 <style>
@@ -111,6 +113,16 @@
                   <i class="fa-solid fa-credit-card"></i>
                 </span>
                 <span class="hide-menu">SALES REPORT</span>
+              </a>
+            </li>
+
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="/admin/offers" aria-expanded="false">
+                <span>
+                  <i class="fas fa-tags"></i>
+
+                </span>
+                <span class="hide-menu">Offers</span>
               </a>
             </li>
 
